// protoc --java_out=./src src/edu/umass/cs/pram/proto/pram_packet.proto
syntax = "proto3";

package pram;

option java_package = "edu.umass.cs.pram.proto";
option java_outer_classname = "PramPacketProto";

message PramReadPacket {
  int64 packet_id = 1;
  bytes encoded_request = 2;
}

message PramWritePacket {
  int64 packet_id = 1;
  bytes encoded_request = 2;
}

message PramWriteAfterPacket {
  int64 packet_id = 1;
  string sender_node_id = 2;
  bytes encoded_request = 3;
}
